--- a/templates/create.html
+++ b/templates/create.html
@@ -11,6 +11,8 @@
     <input type="text" name="model" /><br><br>
     <label>Company</label><br>
     <input type="text" name="company" /><br><br>
+    <label>Quantity</label><br>
+    <input type="number" name="quantity"/><br><br>
     <label>Price</label><br>
     <input type="number" name="price" /><br><br>
     <input type="submit" value="Send" />
