--- a/templates/edit.html
+++ b/templates/edit.html
@@ -12,6 +12,8 @@
     <input type="text" name="model" value="{{.Model}}"/><br><br>
     <label> Company</label><br>
     <input type="text" name="company" value="{{.Company}}"/><br><br>
+    <label>Quantity</label><br>
+    <input type="number" name="quantity" value="{{.Quantity}}"/><br><br>
     <label> Price</label><br>
     <input type="number" name="price" value="{{.Price}}"/><br><br>
     <input type="submit" value="Send"/>
