--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,13 @@
 <h2>Список товаров</h2>
 <p><a href="/create">Добавить</a></p>
 <table>
-    <thead><th>Id</th><th>Model</th><th>Company</th><th>Price</th><th></th></thead>
+    <thead><th>Id</th><th>Model</th><th>Company</th><th>Quantity</th><th>Price</th><th></th></thead>
     {{range . }}
     <tr>
         <td>{{.Id}}</td>
         <td>{{.Model}}</td>
         <td>{{.Company}}</td>
+        <td>{{.Quantity}}</td>
         <td>{{.Price}}</td>
         <td><a href="/edit/{{.Id}}">Изменить</a> |
             <a href="/delete/{{.Id}}">Удалить</a>
