--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Products</title>
+    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/examples/cover/cover.css">
 </head>
 <body>
 <h2>Список товаров</h2>
