working database update2

--- a/templates/create.html
+++ b/templates/create.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>New Product</title>
+    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/examples/cover/cover.css">
 </head>
 <body>
 <h3>Add Product</h3>
