--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
         <td>{{.Price}}</td>
         <td><a href="/edit/{{.Id}}">Изменить</a> |
             <a href="/delete/{{.Id}}">Удалить</a>
+            <a href="/feature/{{.Id}}"> Особенности</a>
         </td>
     </tr>
     {{end}}
