--- a/templates/feature.html
+++ b/templates/feature.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/examples/cover/cover.css">
 </head>
 <body>
-<p>Первая строка</p>
-<p>Вторая строка</p>
-<div>Третья строка</div>
+<p>ID: {{.Id}}</p>
+<p>Model: {{.Model}}</p>
+<div>CPU: {{.Characteristics.CPU.Int32}}</div>
 <div>Четвертая строка</div>
 <div style="color:#ff0000"><p>Пятая строка</p></div>
 <div>Шестая строка</div>
