--- a/templates/create.html
+++ b/templates/create.html
@@ -16,6 +16,11 @@
     <input type="number" name="quantity"/><br><br>
     <label>Price</label><br>
     <input type="number" name="price" /><br><br>
+    <br>
+    <h3>Характеристики</h3>
+    <label>CPU</label><br>
+    <input type="number" name="cpu" /><br><br>
+
     <input type="submit" value="Send" />
 </form>
 </body>
