--- a/templates/create.html
+++ b/templates/create.html
@@ -20,7 +20,12 @@
     <h3>Характеристики</h3>
     <label>CPU</label><br>
     <input type="number" name="cpu" /><br><br>
-
+    <label>Memory</label><br>
+    <input type="number" name="memory" /><br><br>
+    <label>Display</label><br>
+    <input type="number" name="display" /><br><br>
+    <label>Camera</label><br>
+    <input type="number" name="camera" /><br><br>
     <input type="submit" value="Send" />
 </form>
 </body>
