--- a/templates/edit.html
+++ b/templates/edit.html
@@ -17,6 +17,15 @@
     <input type="number" name="quantity" value="{{.Quantity}}"/><br><br>
     <label> Price</label><br>
     <input type="number" name="price" value="{{.Price}}"/><br><br>
+    <h3>Характеристики</h3>
+    <label>CPU</label><br>
+    <input type="number" name="cpu" value="{{.Features.CPU.Int32}}"/><br><br>
+    <label>Memory</label><br>
+    <input type="number" name="memory" value="{{.Features.Memory.Int32}}"/><br><br>
+    <label>Display</label><br>
+    <input type="number" name="display" value="{{.Features.Display.Int32}}"/><br><br>
+    <label>Camera</label><br>
+    <input type="number" name="camera" value="{{.Features.Camera.Int32}}"/><br><br>
     <input type="submit" value="Send"/>
 </form>
 </body>
