--- a/templates/feature.html
+++ b/templates/feature.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <p>ID: {{.Id}}</p>
-<p>Model: {{.Model}}</p>
-<div>CPU: {{.Characteristics.CPU.Int32}}</div>
-<div>Четвертая строка</div>
-<div style="color:#ff0000"><p>Пятая строка</p></div>
-<div>Шестая строка</div>
+<p style="color:#00009c">Model: {{.Model}}</p>
+<div style="color:#ffffff">CPU: {{.Features.CPU.Int32}}</div>
+<div style="color:#f1f182">Memory: {{.Features.Memory.Int32}}</div>
+<div style="color:#f1f182">Display: {{.Features.Display.Int32}}</div>
+<div style="color:#f1f182">Camera: {{.Features.Camera.Int32}}</div>
 </body>
 </html>
