--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <p><a href="/create">Добавить</a></p>
 <table>
     <thead><th>Id</th><th>Model</th><th>Company</th><th>Quantity</th><th>Price</th><th></th></thead>
-    {{range . }}
+    {{range .Products }}
     <tr>
         <td>{{.Id}}</td>
         <td>{{.Model}}</td>
