--- a/templates/edit.html
+++ b/templates/edit.html
@@ -8,7 +8,7 @@
 <body>
 <h3>Edit Product </h3>
 <form method="POST">
-    <input type ="hidden" name = "id" value="{{.Id}}"/>
+    <input type ="hidden" name = "id" value="{{.ID}}"/>
     <label> Model</label><br>
     <input type="text" name="model" value="{{.Model}}"/><br><br>
     <label> Company</label><br>
